crates/tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__break_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "break_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "break_statement",
      position: 6,
      line: 1,
      column: 7,
    ),
  ),
  data: Break,
))
