crates/tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__expression_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "expression_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "expression_statement",
      position: 8,
      line: 1,
      column: 9,
    ),
  ),
  data: Expression(BinaryOperation(BinaryOperation(
    left: Spanned(
      span: Span(
        start: Location(
          file_name: "expression_statement",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "expression_statement",
          position: 2,
          line: 1,
          column: 3,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "expression_statement",
              position: 0,
              line: 1,
              column: 1,
            ),
            end: Location(
              file_name: "expression_statement",
              position: 2,
              line: 1,
              column: 3,
            ),
          ),
          data: "42",
        ),
        radix: 10,
      ))),
    ),
    operator: Spanned(
      span: Span(
        start: Location(
          file_name: "expression_statement",
          position: 3,
          line: 1,
          column: 4,
        ),
        end: Location(
          file_name: "expression_statement",
          position: 4,
          line: 1,
          column: 5,
        ),
      ),
      data: Addition,
    ),
    right: Spanned(
      span: Span(
        start: Location(
          file_name: "expression_statement",
          position: 5,
          line: 1,
          column: 6,
        ),
        end: Location(
          file_name: "expression_statement",
          position: 7,
          line: 1,
          column: 8,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "expression_statement",
              position: 5,
              line: 1,
              column: 6,
            ),
            end: Location(
              file_name: "expression_statement",
              position: 7,
              line: 1,
              column: 8,
            ),
          ),
          data: "42",
        ),
        radix: 10,
      ))),
    ),
  ))),
))
