crates/tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__for_loop_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "for_loop_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "for_loop_statement",
      position: 47,
      line: 1,
      column: 48,
    ),
  ),
  data: ForInitCondUpdate(ForInitCondUpdate(
    init: Spanned(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 14,
          line: 1,
          column: 15,
        ),
      ),
      data: VariableDeclaration(VariableDeclaration(
        name: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 8,
              line: 1,
              column: 9,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 9,
              line: 1,
              column: 10,
            ),
          ),
          data: "i",
        ),
        ty: None,
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 12,
              line: 1,
              column: 13,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 13,
              line: 1,
              column: 14,
            ),
          ),
          data: Literal(Integer(Integer(
            value: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 12,
                  line: 1,
                  column: 13,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 13,
                  line: 1,
                  column: 14,
                ),
              ),
              data: "0",
            ),
            radix: 10,
          ))),
        ),
      )),
    ),
    condition: Spanned(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 15,
          line: 1,
          column: 16,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 22,
          line: 1,
          column: 23,
        ),
      ),
      data: Expression(BinaryOperation(BinaryOperation(
        left: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 15,
              line: 1,
              column: 16,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 16,
              line: 1,
              column: 17,
            ),
          ),
          data: Variable(Variable(
            name: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 15,
                  line: 1,
                  column: 16,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 16,
                  line: 1,
                  column: 17,
                ),
              ),
              data: "i",
            ),
          )),
        ),
        operator: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 17,
              line: 1,
              column: 18,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 18,
              line: 1,
              column: 19,
            ),
          ),
          data: LessThan,
        ),
        right: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 19,
              line: 1,
              column: 20,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 21,
              line: 1,
              column: 22,
            ),
          ),
          data: Literal(Integer(Integer(
            value: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 19,
                  line: 1,
                  column: 20,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 21,
                  line: 1,
                  column: 22,
                ),
              ),
              data: "10",
            ),
            radix: 10,
          ))),
        ),
      ))),
    ),
    update: Spanned(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 23,
          line: 1,
          column: 24,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 33,
          line: 1,
          column: 34,
        ),
      ),
      data: Expression(BinaryOperation(BinaryOperation(
        left: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 23,
              line: 1,
              column: 24,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 24,
              line: 1,
              column: 25,
            ),
          ),
          data: Variable(Variable(
            name: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 23,
                  line: 1,
                  column: 24,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 24,
                  line: 1,
                  column: 25,
                ),
              ),
              data: "i",
            ),
          )),
        ),
        operator: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 25,
              line: 1,
              column: 26,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 26,
              line: 1,
              column: 27,
            ),
          ),
          data: Assignment,
        ),
        right: Spanned(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 27,
              line: 1,
              column: 28,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 32,
              line: 1,
              column: 33,
            ),
          ),
          data: BinaryOperation(BinaryOperation(
            left: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 27,
                  line: 1,
                  column: 28,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 28,
                  line: 1,
                  column: 29,
                ),
              ),
              data: Variable(Variable(
                name: Spanned(
                  span: Span(
                    start: Location(
                      file_name: "for_loop_statement",
                      position: 27,
                      line: 1,
                      column: 28,
                    ),
                    end: Location(
                      file_name: "for_loop_statement",
                      position: 28,
                      line: 1,
                      column: 29,
                    ),
                  ),
                  data: "i",
                ),
              )),
            ),
            operator: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 29,
                  line: 1,
                  column: 30,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 30,
                  line: 1,
                  column: 31,
                ),
              ),
              data: Addition,
            ),
            right: Spanned(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 31,
                  line: 1,
                  column: 32,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 32,
                  line: 1,
                  column: 33,
                ),
              ),
              data: Literal(Integer(Integer(
                value: Spanned(
                  span: Span(
                    start: Location(
                      file_name: "for_loop_statement",
                      position: 31,
                      line: 1,
                      column: 32,
                    ),
                    end: Location(
                      file_name: "for_loop_statement",
                      position: 32,
                      line: 1,
                      column: 33,
                    ),
                  ),
                  data: "1",
                ),
                radix: 10,
              ))),
            ),
          )),
        ),
      ))),
    ),
    body: Spanned(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 34,
          line: 1,
          column: 35,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 47,
          line: 1,
          column: 48,
        ),
      ),
      data: Block(Block(
        statements: [
          Spanned(
            span: Span(
              start: Location(
                file_name: "for_loop_statement",
                position: 36,
                line: 1,
                column: 37,
              ),
              end: Location(
                file_name: "for_loop_statement",
                position: 45,
                line: 1,
                column: 46,
              ),
            ),
            data: Return(Return(
              value: Some(Spanned(
                span: Span(
                  start: Location(
                    file_name: "for_loop_statement",
                    position: 43,
                    line: 1,
                    column: 44,
                  ),
                  end: Location(
                    file_name: "for_loop_statement",
                    position: 44,
                    line: 1,
                    column: 45,
                  ),
                ),
                data: Variable(Variable(
                  name: Spanned(
                    span: Span(
                      start: Location(
                        file_name: "for_loop_statement",
                        position: 43,
                        line: 1,
                        column: 44,
                      ),
                      end: Location(
                        file_name: "for_loop_statement",
                        position: 44,
                        line: 1,
                        column: 45,
                      ),
                    ),
                    data: "i",
                  ),
                )),
              )),
            )),
          ),
        ],
      )),
    ),
  )),
))
